--- a/yb-front/src/app/modules/app/modules/user/user.component.html
+++ b/yb-front/src/app/modules/app/modules/user/user.component.html
@@ -26,7 +26,16 @@
             <td>1002</td>
             <td>这是一个用户名噢噢噢噢噢噢噢噢</td>
             <td>15564186520</td>
-            <td>用户</td>
+            <td>学霸</td>
+            <td>
+                <button class="btn btn-info " type="button">编辑</button>
+            </td>
+        </tr>
+        <tr>
+            <td>1003</td>
+            <td>这是一个用户名噢噢噢噢噢噢噢噢</td>
+            <td>15564186520</td>
+            <td>学渣</td>
             <td>
                 <button class="btn btn-info " type="button">编辑</button>
             </td>
