--- a/yb-front/src/app/modules/app/views/left-menu/left-menu.component.html
+++ b/yb-front/src/app/modules/app/views/left-menu/left-menu.component.html
@@ -2,7 +2,14 @@
     <ul id="treeMenu" class="tree tree-menu" data-ride="tree">
         <li><a routerLink="/app/message"><i class="icon icon-th"></i>需求管理</a></li>
         <!-- <li><a href="#"><i class="icon icon-user"></i>个人资料</a></li> -->
-        <li><a routerLink="/app/user"><i class="icon icon-trash"></i>用户管理</a></li>
+        <!-- <li><a routerLink="/app/user"><i class="icon icon-trash"></i>用户管理</a></li> -->
+        <li class="open">
+            <a href="#"><i class="icon icon-tasks"></i>用户管理</a>
+            <ul>
+                <li><a routerLink="/app/user">基本操作</a></li>
+                <li><a routerLink="/app/examine">审核学霸</a></li>
+            </ul>
+        </li>
         <li><a routerLink="/app/information"><i class="icon icon-list-ul"></i>账户信息</a></li>
     </ul>
 </nav>
